--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "material-ui": "^0.20.2",
     "next": "^10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
